draft editor enhanced and content in store, entities introduced

--- a/client/src/components/layout/Layout.css
+++ b/client/src/components/layout/Layout.css
@@ -1,6 +1,10 @@
+#children-container {
+  margin-left: 20px;
+}
+
 header {
   background-color: #59A8E9;
-  height: 50px;
+  height: 80px;
   padding: 20px;
   color: white;
 }
